refactor: modular architecture with portable binary
- Restructure from monolithic to modular packages:
  - agent/: core inference loop
  - tools/: individual tool implementations
  - provider/: Saturn discovery and OpenAI client
  - examples/: progressive learning examples
- Embed system prompt into binary (go:embed)
- Add multi-file prompt detection (BRUTUS.md, CLAUDE.md, AGENTS.md)
- Add -cwd flag for working directory override
- Display working directory in agent banner
- Add make install target for PATH installation
- Remove devenv/nix tooling in favor of simple Go build

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
-# Devenv
-.devenv*
-devenv.local.nix
+# Binary
+brutus
+brutus.exe
 
-# direnv
-.direnv
+# Go
+*.test
+*.out
+coverage.txt
 
-# pre-commit
-.pre-commit-config.yaml
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
 
-# Go binaries
-bash_tool
-chat
-chat_verbose
-edit_tool
-list_files
-read
-read_verbose
+# OS
+.DS_Store
+Thumbs.db
 
-# demo files
-fizzbuzz.js
+# Serena
+.serena/
+
+# Environment
+.env
+.envrc
